fix location styling on mobile

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -51,6 +51,9 @@
         color: #26a69a;
       }
     }
+    &.location-collection-item{
+      padding-left: 0px !important;
+    }
     &:last-child{
       border-bottom: 1px solid #e0e0e0;
     }
